# aspen

./: README.md
aspen/src/: README.md
aspen/src/room_node/: package.xml  setup.cfg  setup.py
aspen/src/room_node/room_node/: room_node.py
manual_contol/: ibus.h  main.ino
map/: apt.data  apt.pgm  apt.yaml
micro-ROS_tinyML/: README.md
onnx/: keras_to_onnx.py  model.h5  model.onnx
onnx/saved_model/: fingerprint.pb  keras_metadata.pb  saved_model.pb
onnx/saved_model/variables/: variables.data-00000-of-00001  variables.index
