<?xml version="1.0"?>
<package format="3">
  <name>room_node</name>
  <version>0.1.0</version>
  <description>A simple ROS 2 goal pose publisher/subscriber that accepts room name handles</description>
  <maintainer email="abrown.inbox@gmail.com">Avi Brown</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>